# Agentic-AI-Hackathon-Team-Brave

./: .gitignore  CLAUDE.md  README.md  tmpclaude-0824-cwd
.claude/: settings.json  settings.local.json
.github/: pull_request_template.md
.github/workflows/: app-deploy.yaml  convert-plantuml.yml  db-migrate.yaml  deploy-agents.yml  deploy.yaml  release.yaml  terraform.yaml
.kiro/specs/hearing-api/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
ai/: .env.template  .gitignore  README.md  agent-engine-setup.md  config.py  create_agent.temp.py  create_agent_id.py  deploy_agent.py  fp_agent.py  pyproject.toml  python-environment-setup.md  test_agent.py
ai/agents/: __init__.py  fp_agent.py
app/: .firebaserc  .gitignore  Dockerfile  README.md  components.json  docker-compose.yaml  eslint.config.mjs  firebase.json  package-lock.json  package.json  prisma.config.ts  tailwind.config.ts  vitest.config.ts
app/prisma/: schema.prisma
app/scripts/zod/: genJson.ts  schemaRegistry.ts
app/src/agents/: fpInstructor.ts  jsonEditor.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/config/: env.ts  index.ts
app/src/consts/: endpoint.ts  index.ts  message.ts  prompt.ts  (+2 more)
cloud/: .gitignore  ArchitectureDiagram.drawio  apis.tf  cloudRun.tf  database.tf  main.tf  monitor_scheduler.tf  secretManager.tf
docs/: LifeCompassAgent_アーキテクチャ図.drawio  git-flow.md  hearing-sequence.puml  solution-overview.md  usecase.puml
docs/createLifeCompass/: hearingBlueprint.md  hearingResultSample.jsonc
(+102 files in other folders)
